k8s/manifests/base/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nest
  labels:
    app: nest
